--- a/CollegeEstimator.html
+++ b/CollegeEstimator.html
@@ -14,7 +14,7 @@
 			td, th, td input {text-align: right;}
       #loan_table {background-color: pink;}
 		</style>
-
+<script type="text/javascript" src="script.js"></script>
 	</head>
 
 	<body onload="">
@@ -101,54 +101,52 @@
                 								<tr>
 									<td><span id="pmt_year01">2026</span></td>
 									<td><span id="pmt_amt01">$6,500.00</span></td>
-									<td><span id="pmt_int01">$2,297.60</span></td>
-									<td><span id="pmt_bal01">$53,017.22</span></td>
+									<td><span id="pmt_int01">$2,107.23</span></td>
+									<td><span id="pmt_bal01">$48,624.44</span></td>
 								</tr>
                 <tr>
 									<td><span id="pmt_year01">2027</span></td>
 									<td><span id="pmt_amt01">$6,500.00</span></td>
-									<td><span id="pmt_int01">$2,297.60</span></td>
-									<td><span id="pmt_bal01">$53,017.22</span></td>
+									<td><span id="pmt_int01">$1,908.24</span></td>
+									<td><span id="pmt_bal01">$44,032.68</span></td>
 								</tr>
                 <td><span id="pmt_year01">2028</span></td>
 									<td><span id="pmt_amt01">$6,500.00</span></td>
-									<td><span id="pmt_int01">$2,297.60</span></td>
-									<td><span id="pmt_bal01">$53,017.22</span></td>
+									<td><span id="pmt_int01">$1,700.23</span></td>
+									<td><span id="pmt_bal01">$39,232.91</span></td>
 								</tr>
               <td><span id="pmt_year01">2029</span></td>
 									<td><span id="pmt_amt01">$6,500.00</span></td>
-									<td><span id="pmt_int01">$2,297.60</span></td>
-									<td><span id="pmt_bal01">$53,017.22</span></td>
+									<td><span id="pmt_int01">$1,482.80</span></td>
+									<td><span id="pmt_bal01">$34,215.71</span></td>
 								</tr>
             <td><span id="pmt_year01">2030</span></td>
 									<td><span id="pmt_amt01">$6,500.00</span></td>
-									<td><span id="pmt_int01">$2,297.60</span></td>
-									<td><span id="pmt_bal01">$53,017.22</span></td>
+									<td><span id="pmt_int01">$1,255.52</span></td>
+									<td><span id="pmt_bal01">$28,971.24</span></td>
 								</tr>
           <td><span id="pmt_year01">2031</span></td>
 									<td><span id="pmt_amt01">$6,500.00</span></td>
-									<td><span id="pmt_int01">$2,297.60</span></td>
-									<td><span id="pmt_bal01">$53,017.22</span></td>
+									<td><span id="pmt_int01">$1,017.95</span></td>
+									<td><span id="pmt_bal01">$23,489.18</span></td>
 								</tr>
         <td><span id="pmt_year01">2032</span></td>
 									<td><span id="pmt_amt01">$6,500.00</span></td>
-									<td><span id="pmt_int01">$2,297.60</span></td>
-									<td><span id="pmt_bal01">$53,017.22</span></td>
+									<td><span id="pmt_int01">$769.61</span></td>
+									<td><span id="pmt_bal01">$17,758.79</span></td>
 								</tr>
       <td><span id="pmt_year01">2033</span></td>
 									<td><span id="pmt_amt01">$6,500.00</span></td>
-									<td><span id="pmt_int01">$2,297.60</span></td>
-									<td><span id="pmt_bal01">$53,017.22</span></td>
+									<td><span id="pmt_int01">$510.02</span></td>
+									<td><span id="pmt_bal01">$11,768.82</span></td>
 								</tr>
     <td><span id="pmt_year01">2034</span></td>
 									<td><span id="pmt_amt01">$6,500.00</span></td>
-									<td><span id="pmt_int01">$2,297.60</span></td>
-									<td><span id="pmt_bal01">$53,017.22</span></td>
+									<td><span id="pmt_int01">$238.68</span></td>
+									<td><span id="pmt_bal01">$5,507.49</span></td>
 								</tr>
   <td><span id="pmt_year01">2035</span></td>
-									<td><span id="pmt_amt01">$6,500.00</span></td>
-									<td><span id="pmt_int01">$2,297.60</span></td>
-									<td><span id="pmt_bal01">$53,017.22</span></td>
+									<td><span id="pmt_amt01">$5,507.49</span></td>
 								</tr>
 
 								
@@ -157,7 +155,7 @@
 					</div>
 
 				</div>
-
+ 
 			</form>
 
 		</div>
